docs/deployment/kubernetes/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: foundryvtt
  namespace: foundryvtt
  labels:
    app.kubernetes.io/name: foundryvtt
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: foundryvtt
  ports:
    - name: http
      port: 80
      targetPort: http
